cbits/Bullet.h

void* btActionInterface_getFixedBody(); //method: getFixedBody ::btRigidBody & (*)(  )
void btActionInterface_updateAction(void *c,void* p0,float p1); //method: updateAction void ( ::btActionInterface::* )( ::btCollisionWorld *,::btScalar ) 
void btActionInterface_debugDraw(void *c,void* p0); //method: debugDraw void ( ::btActionInterface::* )( ::btIDebugDraw * ) 
void* btDiscreteDynamicsWorld_new(void* p0,void* p1,void* p2,void* p3); //constructor: btDiscreteDynamicsWorld  ( ::btDiscreteDynamicsWorld::* )( ::btDispatcher *,::btBroadphaseInterface *,::btConstraintSolver *,::btCollisionConfiguration * ) 
void btDiscreteDynamicsWorld_free(void *c);
 
void btDiscreteDynamicsWorld_setGravity(void *c,float* p0); //method: setGravity void ( ::btDiscreteDynamicsWorld::* )( ::btVector3 const & ) 
void btDiscreteDynamicsWorld_addAction(void *c,void* p0); //method: addAction void ( ::btDiscreteDynamicsWorld::* )( ::btActionInterface * ) 
void btDiscreteDynamicsWorld_applyGravity(void *c); //method: applyGravity void ( ::btDiscreteDynamicsWorld::* )(  ) 
void btDiscreteDynamicsWorld_serialize(void *c,void* p0); //method: serialize void ( ::btDiscreteDynamicsWorld::* )( ::btSerializer * ) 
void* btDiscreteDynamicsWorld_getCollisionWorld(void *c); //method: getCollisionWorld ::btCollisionWorld * ( ::btDiscreteDynamicsWorld::* )(  ) 
void btDiscreteDynamicsWorld_addRigidBody(void *c,void* p0); //method: addRigidBody void ( ::btDiscreteDynamicsWorld::* )( ::btRigidBody * ) 
void btDiscreteDynamicsWorld_addRigidBody0(void *c,void* p0); //method: addRigidBody void ( ::btDiscreteDynamicsWorld::* )( ::btRigidBody * ) 
void btDiscreteDynamicsWorld_addRigidBody1(void *c,void* p0,short int p1,short int p2); //method: addRigidBody void ( ::btDiscreteDynamicsWorld::* )( ::btRigidBody *,short int,short int ) 
void btDiscreteDynamicsWorld_clearForces(void *c); //method: clearForces void ( ::btDiscreteDynamicsWorld::* )(  ) 
void btDiscreteDynamicsWorld_removeVehicle(void *c,void* p0); //method: removeVehicle void ( ::btDiscreteDynamicsWorld::* )( ::btActionInterface * ) 
void btDiscreteDynamicsWorld_serializeRigidBodies(void *c,void* p0); //method: serializeRigidBodies void ( ::btDiscreteDynamicsWorld::* )( ::btSerializer * ) 
void btDiscreteDynamicsWorld_internalSingleStepSimulation(void *c,float p0); //method: internalSingleStepSimulation void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
int btDiscreteDynamicsWorld_getSynchronizeAllMotionStates(void *c); //method: getSynchronizeAllMotionStates bool ( ::btDiscreteDynamicsWorld::* )(  ) const
void btDiscreteDynamicsWorld_setNumTasks(void *c,int p0); //method: setNumTasks void ( ::btDiscreteDynamicsWorld::* )( int ) 
void btDiscreteDynamicsWorld_setSynchronizeAllMotionStates(void *c,int p0); //method: setSynchronizeAllMotionStates void ( ::btDiscreteDynamicsWorld::* )( bool ) 
void btDiscreteDynamicsWorld_predictUnconstraintMotion(void *c,float p0); //method: predictUnconstraintMotion void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
void btDiscreteDynamicsWorld_removeConstraint(void *c,void* p0); //method: removeConstraint void ( ::btDiscreteDynamicsWorld::* )( ::btTypedConstraint * ) 
int btDiscreteDynamicsWorld_getNumConstraints(void *c); //method: getNumConstraints int ( ::btDiscreteDynamicsWorld::* )(  ) const
void btDiscreteDynamicsWorld_addCollisionObject(void *c,void* p0,short int p1,short int p2); //method: addCollisionObject void ( ::btDiscreteDynamicsWorld::* )( ::btCollisionObject *,short int,short int ) 